--- a/cover-letter/package.json
+++ b/cover-letter/package.json
@@ -12,10 +12,15 @@
     "embla-carousel-react": "^8.0.0-rc07",
     "next": "13.4.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7"
+    "eslint-config-next": "13.4.7",
+    "postcss": "^8.4.24",
+    "sass": "^1.63.6",
+    "tailwindcss": "^3.3.2"
   }
 }
