basic layout finished

--- a/cover-letter/package.json
+++ b/cover-letter/package.json
@@ -12,6 +12,7 @@
     "embla-carousel-react": "^8.0.0-rc07",
     "next": "13.4.7",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1"
   },
