--- a/cover-letter/package.json
+++ b/cover-letter/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "embla-carousel-react": "^8.0.0-rc07",
+    "framer-motion": "^10.12.18",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
