--- a/cover-letter/package.json
+++ b/cover-letter/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "embla-carousel-react": "^8.0.0-rc07",
     "framer-motion": "^10.12.18",
-    "next": "13.4.7",
+    "next": "^13.4.7",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
